--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="stylesheet" href="dist/style.css">
-    <script type="text/javascript" src="dist/bundle.js"></script>
+    <link rel="stylesheet" href="./dist/css/style.bundle.css">
+    <script src="./dist/js/bundle.js"></script>
 </head>
 <body>
+    
 </body>
 </html>
